# personal-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  INFRASTRUCTURE.md  LICENSE  Makefile  PRODUCTION_UPGRADE_COMPLETE.md  README.md  REFACTOR_COMPLETE.md  SECURITY.md  TEST_SUITE_GUIDE.md  UPGRADE_SUMMARY.md  bandit.yaml  config.example.yaml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  health_check.sh  init.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.deps/pypdf-6.9.2.dist-info/: RECORD
.deps/typing_extensions-4.15.0.dist-info/: RECORD
_backup/: app.py  test_app.py  test_web_app.py  web_app.py
_backup/web/: app.js  index.html  styles.css
config/: logging.conf  nginx.conf  prometheus.yml  settings.development.py  settings.production.py
docs/: CHANGELOG.md  README.md  api.md  architecture.md  deployment.md  development.md  getting-started.md  upgrade-plan.md  user-guide.md
docs/superpowers/plans/: 2026-03-27-production-iteration-plan.md  2026-03-28-phase1-enhancement-plan.md  2026-03-29-phase2-frontend-plan.md  2026-03-29-phase3-observability-plan.md  2026-03-29-phase4-security-plan.md
docs/superpowers/specs/: 2025-03-26-increase-upload-limit-design.md  2026-03-27-production-iteration-design.md  2026-03-28-phase1-enhancement-design.md
rag_system/: __init__.py  __main__.py  cli.py  rag_engine.py
rag_system/api/: __init__.py  deps.py  health_routes.py  loader.py  metrics_routes.py  security.py  server.py
rag_system/api/routes/: __init__.py  files.py  history.py  library.py  upload.py
rag_system/backends/: __init__.py  cross_encoder_reranker.py  embedding.py  onnx_embedding.py  prf_reranker.py  reranker.py
rag_system/backends/vector_store/: __init__.py  base.py  faiss_store.py  numpy_store.py
rag_system/cache/: __init__.py  base.py  memory_cache.py  redis_cache.py
rag_system/config/: __init__.py  loader.py  settings.py
rag_system/core/: __init__.py  base.py  dependency_injection.py
rag_system/exceptions/: __init__.py  base.py  file_exceptions.py  handlers.py
rag_system/index/: __init__.py  bm25_store.py  manager.py  version.py  watcher.py
rag_system/models/: __init__.py  upload_history.py
rag_system/monitoring/: __init__.py  decorators.py  health.py  logging_config.py  metrics.py  prometheus_exporter.py  prometheus_middleware.py  tracing.py
rag_system/security/: __init__.py  audit_logger.py  middleware.py  rate_limiter.py  validators.py
rag_system/services/: __init__.py  file_service.py  history_service.py
rag_system/utils/: __init__.py  file.py  file_security.py  json_utils.py  retry.py  text.py
tests/: README.md  __init__.py  conftest.py
tests/api/: __init__.py  test_web_api.py
tests/benchmark/: __init__.py  test_benchmarks.py
tests/integration/: __init__.py  test_rag_pipeline.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_advanced_reranker.py  test_bm25_store.py  test_document_watcher.py  test_embedding.py  test_index_manager.py  test_index_version.py  test_onnx_embedding.py  test_parser.py  test_query_cache.py  test_reranker.py  test_tokenizer.py  test_utils.py  test_vector_store.py
web-new/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web-new/src/: App.tsx  main.tsx  vite-env.d.ts
web-new/src/components/ErrorBoundary/: ErrorBoundary.tsx
web-new/src/components/PageLoader/: PageLoader.tsx
web-new/src/components/ThemeToggle/: ThemeToggle.tsx
web-new/src/hooks/: useLibraryQuery.ts  useReloadMutation.ts
web-new/src/i18n/: index.ts
web-new/src/i18n/locales/: en-US.json  zh-CN.json
web-new/src/pages/Home/: Home.tsx
web-new/src/services/: api.ts  client.ts
web-new/src/stores/: themeStore.ts
web-new/src/styles/: global.less  theme.ts
web-new/src/types/: index.ts
web-new/src/utils/: format.ts  highlight.ts  storage.ts
(+13 files in other folders)
